--- a/css/main.css
+++ b/css/main.css
@@ -115,12 +115,12 @@ body {
   margin-top: 16px;
 }
 
-.soc-media__item:last-child {
-  margin-right: 0;
-}
-
 .soc-media__item {
   margin-right: 10px;
+}
+
+.soc-media__item:last-child {
+  margin-right: 0;
 }
 
 .soc-media__link {
@@ -134,14 +134,33 @@ body {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.soc-media__link:hover,
-.soc-media__link:focus {
+.soc-media__link:hover, .soc-media__link:focus {
   background-color: var(--accent-color);
   color: var(--primary-white-color);
 }
 
 .soc-media__icon {
   fill: currentColor;
+}
+
+.soc-media {
+  margin-left: 70px;
+}
+
+.soc-media__title {
+  margin-bottom: 20px;
+  text-transform: uppercase;
+  line-height: 1.14;
+  color: var(--primary-white-color);
+}
+
+.soc-media__link {
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 50%;
+}
+
+.soc-media__icon--dark {
+  fill: var(--primary-white-color);
 }
 
 .header {
@@ -459,10 +478,6 @@ body {
   fill: currentColor;
 }
 
-.projects-section-title {
-  font-size: 0;
-}
-
 .button-list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -476,7 +491,7 @@ body {
   margin-bottom: 50px;
 }
 
-.button-item {
+.button-list__item {
   margin-right: 8px;
   font-weight: 500;
   font-size: 16px;
@@ -485,11 +500,11 @@ body {
   text-align: center;
 }
 
-.button-item:last-child {
+.button-list__item:last-child {
   margin-right: 0;
 }
 
-.filter-button {
+.button-list__button {
   display: inline-block;
   padding: 6px 22px;
   border: 1px solid transparent;
@@ -502,8 +517,7 @@ body {
   cursor: pointer;
 }
 
-.filter-button:hover,
-.filter-button:focus {
+.button-list__button:hover, .button-list__button:focus {
   color: var(--primary-white-color);
   background-color: var(--accent-color);
   -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -521,25 +535,21 @@ body {
           justify-content: center;
 }
 
-.project-list-item {
+.project-list__item {
   margin-right: auto;
   margin-bottom: 30px;
   border: 1px solid #EEEEEE;
 }
 
-.project-list-item:nth-last-child(-n+3) {
+.project-list__item:nth-last-child(-n+3) {
   margin-bottom: 0;
 }
 
-.project-list-item:nth-child(3n) {
+.project-list__item:nth-child(3n) {
   margin-right: 0;
 }
 
-.project-general {
-  padding: 20px 24px;
-}
-
-.project-list-link {
+.project-list__link {
   display: block;
   text-decoration: none;
   color: inherit;
@@ -549,32 +559,17 @@ body {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.project-list-link:hover,
-.project-list-link:focus {
+.project-list__link:hover, .project-list__link:focus {
   -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.project-title {
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 2.0;
-  letter-spacing: 0.06em;
-  color: var(--title-text-color);
-}
-
-.project-type {
-  margin-top: 4px;
-  font-size: 16px;
-  line-height: 1.87;
-}
-
-.image-wrapper {
+.project-list__image-wrapper {
   position: relative;
   overflow: hidden;
 }
 
-.project-overlay {
+.project-list__overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -590,19 +585,37 @@ body {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.project-list-link:hover .project-overlay,
-.project-list-link:focus .project-overlay {
+.project-list__link:hover .project-list__overlay,
+.project-list__link:focus .project-list__overlay {
   -webkit-transform: translateY(0);
           transform: translateY(0);
   opacity: 1;
 }
 
-.project-overlay p {
+.project-list__description {
   position: absolute;
   padding: 63px 24px;
   font-size: 18px;
   line-height: 1.56;
   color: var(--primary-white-color);
+}
+
+.project {
+  padding: 20px 24px;
+}
+
+.project__title {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2.0;
+  letter-spacing: 0.06em;
+  color: var(--title-text-color);
+}
+
+.project__type {
+  margin-top: 4px;
+  font-size: 16px;
+  line-height: 1.87;
 }
 
 .footer {
@@ -644,27 +657,7 @@ body {
   color: var(--accent-color);
 }
 
-.soc-media {
-  margin-left: 70px;
-}
-
-.soc-media__title {
-  margin-bottom: 20px;
-  text-transform: uppercase;
-  line-height: 1.14;
-  color: var(--primary-white-color);
-}
-
-.soc-media__link {
-  background-color: rgba(255, 255, 255, 0.1);
-  border-radius: 50%;
-}
-
-.soc-media__icon--dark {
-  fill: var(--primary-white-color);
-}
-
-/* Форма футера */
+/* Форма для футера */
 .subscribe-form {
   display: -webkit-box;
   display: -ms-flexbox;
