--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -37,13 +37,13 @@
     color: #000000;
     cursor: pointer;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.modal-close-button:hover,
-.modal-close-button:focus{
-    color: var(--accent-color);
-}
 
+    &:hover,
+    &:focus{
+        color: var(--accent-color);
+    }
+}
 .close-icon{
     width: 11px;
     height: 11px;
@@ -100,9 +100,10 @@
     border-radius: 4px;
     outline: none;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal-input:focus{
-    border-color: var(--accent-color);
+
+    &:focus{
+        border-color: var(--accent-color);
+    }
 }
 .input-icon{
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -162,11 +163,12 @@
     border-color: var(--accent-color);
     border-radius: 4px;
     box-shadow: rgba(0, 0, 0, 0.15);
-}
-.modal-submit-button:hover,
-.modal-submit-button:focus{
-    background-color: #188CE8;
 
+    &:hover,
+    &:focus{
+        background-color: #188CE8;
+
+    }
 }
 .modal.is-hidden{
     opacity: 0;
