--- a/sass/components/_soc-media-list.scss
+++ b/sass/components/_soc-media-list.scss
@@ -4,12 +4,15 @@
     align-items: center;
     margin-top: 16px;
 }
-.soc-media__item:last-child{
-    margin-right: 0;
-}
+
 .soc-media__item{
     margin-right: 10px;
+
+    &:last-child{
+        margin-right: 0;
+    }
 }
+
 .soc-media__link{
     display: flex;
     padding: 12px;
@@ -17,12 +20,33 @@
     color: var(--icon-link-color);
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.soc-media__link:hover,
-.soc-media__link:focus{
-    background-color: var(--accent-color);
-    color: var(--primary-white-color);
+
+    &:hover,
+    &:focus{
+        background-color: var(--accent-color);
+        color: var(--primary-white-color);
+    }
 }
 .soc-media__icon{
     fill: currentColor;
+}
+
+// Для футера
+
+.soc-media{
+    margin-left: 70px;
+
+    &__title{
+        margin-bottom: 20px;
+        text-transform: uppercase;
+        line-height: 1.14;
+        color: var(--primary-white-color);
+    }
+    &__link{
+        background-color: rgba(255, 255, 255, 0.1);
+        border-radius: 50%;
+    }
+    &__icon--dark{
+        fill: var(--primary-white-color);
+    }
 }
