--- a/sass/layout/_projects-section.scss
+++ b/sass/layout/_projects-section.scss
@@ -1,109 +1,116 @@
-.projects-section-title{
-    font-size: 0;
-}
+
 .button-list{
     display: flex;
     justify-content: center;
     align-items: center;
     margin-bottom: 50px;
-}
 
-.button-item{
-    margin-right: 8px;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.62;
-    color: var(--title-text-color);
-    text-align: center;
-}
-.button-item:last-child{
-    margin-right: 0;
-}
-.filter-button{
-    display: inline-block;
-    padding: 6px 22px;
-    border: 1px solid transparent;
-    border-radius: 4px;
-    background-color: var(--medium-background-color);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    cursor: pointer;
-}
-.filter-button:hover,
-.filter-button:focus{
-    color: var(--primary-white-color);
-    background-color: var(--accent-color);
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+
+    &__item{
+        margin-right: 8px;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.62;
+        color: var(--title-text-color);
+        text-align: center;
+
+        &:last-child{
+            margin-right: 0;
+        }
+    }
+    
+    &__button{
+        display: inline-block;
+        padding: 6px 22px;
+        border: 1px solid transparent;
+        border-radius: 4px;
+        background-color: var(--medium-background-color);
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        cursor: pointer;
+    
+        &:hover,
+        &:focus{
+            color: var(--primary-white-color);
+            background-color: var(--accent-color);
+            box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+        }
+    }
 }
 .project-list{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-}
-.project-list-item{
-    margin-right: auto;
-    margin-bottom: 30px;
-    border: 1px solid #EEEEEE;
-}
-.project-list-item:nth-last-child(-n+3){
-    margin-bottom: 0;
-}
-.project-list-item:nth-child(3n){
-    margin-right: 0;
+
+    &__item{
+        margin-right: auto;
+        margin-bottom: 30px;
+        border: 1px solid #EEEEEE;
+        &:nth-last-child(-n+3){
+            margin-bottom: 0;
+        }
+        &:nth-child(3n){
+            margin-right: 0;
+        }
+    }
+    
+    &__link{
+        display: block;
+        text-decoration: none;
+        color: inherit;
+        transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   
+        &:hover,
+        &:focus{
+            box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+        }
+    }
+
+    &__image-wrapper{
+        position: relative;
+        overflow: hidden;
+    }
+    &__overlay{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(33, 150, 243, 0.9);
+        transform: translateY(100%);
+        opacity: 0;
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    &__link:hover .project-list__overlay,
+    &__link:focus .project-list__overlay{
+        transform: translateY(0);
+        opacity: 1;
+    }
+    &__description{
+        position: absolute;
+        padding: 63px 24px;
+        font-size: 18px;
+        line-height: 1.56;
+        color: var(--primary-white-color);
+    }
 }
 
-.project-general{
+.project{
     padding: 20px 24px;
-}
-.project-list-link{
-    display: block;
-    text-decoration: none;
-    color: inherit;
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.project-list-link:hover,
-.project-list-link:focus{
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
 
-.project-title {
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 2.0;
-    letter-spacing: 0.06em;
-    color: var(--title-text-color);
-}
-.project-type{
-    margin-top: 4px;
-    font-size: 16px;
-    line-height: 1.87;
-}
-.image-wrapper{
-    position: relative;
-    overflow: hidden;
-}
-.project-overlay{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(33, 150, 243, 0.9);
-    transform: translateY(100%);
-    opacity: 0;
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.project-list-link:hover .project-overlay,
-.project-list-link:focus .project-overlay{
-    transform: translateY(0);
-    opacity: 1;
-}
-.project-overlay p{
-    position: absolute;
-    padding: 63px 24px;
-    font-size: 18px;
-    line-height: 1.56;
-    color: var(--primary-white-color);
+
+    &__title {
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 2.0;
+        letter-spacing: 0.06em;
+        color: var(--title-text-color);
+    }
+    &__type{
+        margin-top: 4px;
+        font-size: 16px;
+        line-height: 1.87;
+    }
 }
